# loadtune

./: .gitignore  LICENSE  README.md  colab_eval.ipynb  pyproject.toml  report.md  test_report.html  test_report.md
.github/workflows/: ci.yml
examples/: dle_resnet50.py  hf_sentiment.py  lightning_cifar10.py  real_food101_resnet50.py  resnet50_cifar.py  synthetic_bottleneck.py
results/: report.md  resnet50_llm.md  resnet50_llm_v2.html  resnet50_llm_v2.md  resnet_report.md  synthetic_repeats.md
skills/loadtune/: SKILL.md
src/loadtune/: __init__.py  _trial.py  api.py  apply.py  cli.py  experiment.py  heuristic.py  knobs.py  mcp_server.py  plots.py  profiler.py  report.py  report_html.py  workload.py
src/loadtune/adapters/: __init__.py  hf.py  lightning.py
src/loadtune/agentic/: orchestrator.py
src/loadtune/brains/: __init__.py  google.py  heuristic.py  llm.py  router.py
tests/: test_adapters.py  test_google.py  test_gpu_evaluation.py  test_heuristic.py  test_memory_profiling.py  test_report_cmd.py
workloads/: distilbert_sst2.py  dle_bert.py  dle_resnet50.py  hf_sentiment.py  lightning_cifar10.py  real_food101_resnet50.py  synthetic_bottleneck.py
