[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loadtune"
version = "0.2.0"
description = "Agentic profiler & tuner for ML training workloads — finds the DataLoader config your GPU was waiting for."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Marija Efremova", email = "marija@kodeollc.com" }]
keywords = ["pytorch", "profiling", "dataloader", "performance", "agent"]
dependencies = [
    "torch>=2.2",
    "numpy>=1.24",
    "psutil",
    "matplotlib>=3.7",
    "jinja2>=3.1",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
llm = ["anthropic>=0.40"]
google = ["google-genai>=0.1.0"]
agent = ["google-antigravity"]
vision = ["torchvision"]
nlp = ["transformers", "datasets"]
test = ["pytest"]
all = ["loadtune[llm,google,agent,vision,nlp,test]"]

[project.scripts]
loadtune = "loadtune.cli:main"
loadtune-mcp = "loadtune.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/loadtune"]
