[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loadtune"
version = "0.3.0"
description = "Agentic profiler & tuner for ML training workloads — finds the DataLoader config your GPU was waiting for."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Marija Efremova", email = "marija@kodeollc.com" }]
keywords = ["pytorch", "profiling", "dataloader", "performance", "agent"]
dependencies = [
    "torch>=2.2",
    "numpy>=1.24",
    "psutil",
    "matplotlib>=3.7",
    "jinja2>=3.1",
]

[project.optional-dependencies]
vision = ["torchvision"]
nlp = ["transformers", "datasets"]
lightning = ["lightning>=2.0"]
test = ["pytest"]
all = ["loadtune[vision,nlp,lightning,test]"]

[project.scripts]
loadtune = "loadtune.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/loadtune"]
